<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/filter_item_image"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#32CD32"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/baseline_filter_list_white_36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filter_item_label_filter_views"
        style="@style/ToolBarTextView"
        android:layout_marginTop="10dp"
        android:text="@string/filter_tv_views"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_item_image" />

    <EditText
        android:id="@+id/edit_text_filter_views_start"
        style="@style/FilterDialogEditTextPrimary"
        android:layout_marginTop="8dp"
        android:hint="@string/views_start_hint"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_filter_views_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_item_label_filter_views" />

    <EditText
        android:id="@+id/edit_text_filter_views_end"
        style="@style/FilterDialogEditTextPrimary"
        android:hint="@string/views_end_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_text_filter_views_start"
        app:layout_constraintTop_toBottomOf="@+id/filter_item_label_filter_views" />

    <CheckBox
        android:id="@+id/filter_checkbox_views"
        style="@style/FilterDialogSingleCheckBoxPrimary"
        android:layout_marginTop="10dp"
        android:text="@string/views_range_checkbox_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_filter_views_start" />

    <TextView
        android:id="@+id/filter_item_label_sorting_name"
        style="@style/FilterDialogTextViewPrimary"
        android:layout_marginTop="30dp"
        android:text="@string/filter_tv_sorting_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_checkbox_views" />

    <CheckBox
        android:id="@+id/filter_checkbox_sorting_name_ascending"
        style="@style/FilterDialogMultiplyCheckBoxPrimary"
        android:layout_marginTop="8dp"
        android:text="@string/filter_checkbox_sorting_name_ascending"
        app:layout_constraintEnd_toStartOf="@+id/filter_checkbox_sorting_name_descending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_item_label_sorting_name" />

    <CheckBox
        android:id="@+id/filter_checkbox_sorting_name_descending"
        style="@style/FilterDialogMultiplyCheckBoxPrimary"
        android:layout_marginTop="8dp"
        android:text="@string/filter_checkbox_sorting_name_descending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/filter_checkbox_sorting_name_ascending"
        app:layout_constraintTop_toBottomOf="@+id/filter_item_label_sorting_name" />

    <TextView
        android:id="@+id/filter_item_label_sorting_rating"
        style="@style/FilterDialogTextViewPrimary"
        android:layout_marginTop="30dp"
        android:text="@string/filter_tv_sorting_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_checkbox_sorting_name_ascending" />

    <CheckBox
        android:id="@+id/filter_checkbox_sorting_rating_ascending"
        style="@style/FilterDialogMultiplyCheckBoxPrimary"
        android:layout_marginTop="8dp"
        android:text="@string/filter_checkbox_sorting_rating_ascending"
        app:layout_constraintEnd_toStartOf="@+id/filter_checkbox_sorting_rating_descending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_item_label_sorting_rating" />

    <CheckBox
        android:id="@+id/filter_checkbox_sorting_rating_descending"
        style="@style/FilterDialogMultiplyCheckBoxPrimary"
        android:layout_marginTop="8dp"
        android:text="@string/filter_checkbox_sorting_rating_descending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filter_checkbox_sorting_rating_ascending"
        app:layout_constraintTop_toBottomOf="@+id/filter_item_label_sorting_rating" />

    <CheckBox
        android:id="@+id/filter_checkbox_all_films"
        style="@style/FilterDialogSingleCheckBoxPrimary"
        android:layout_marginTop="30dp"
        android:text="@string/filter_checkbox_all_films_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_checkbox_sorting_rating_ascending" />

</androidx.constraintlayout.widget.ConstraintLayout>
